--- a/ktbuoi8.html
+++ b/ktbuoi8.html
@@ -16,7 +16,7 @@
         
     </div>
 
-    <script src="./ktday8.js">
+    <script >
 
 let menu = ["rau xào","thịt luộc","gà rán"];
 //let n = prompt("Người dùng nhập số món ăn muốn lưu:");                 // n là biến người dùng nhập
